--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
 input::placeholder,
 textarea::placeholder {
     font-family: 'Montserrat', sans-serif;
+    color: #aaa;
 }
 
 input:focus,
@@ -37,4 +38,99 @@ nav button {
 a:hover,
 nav button:hover {
     color: #bbb;
+}
+
+/* form styles */
+
+form {
+    max-width: 40%;
+
+    margin: 0 auto;
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1px;
+}
+
+label span {
+    margin-bottom: 0.3em;
+
+    font-weight: bold;
+    text-align: left;
+}
+
+input,
+textarea {
+    box-sizing: border-box;
+    background-color: transparent;
+
+    border: none;
+    border-bottom: 1px solid #ccc;
+
+    padding: 0.8em 0;
+}
+
+/* buttns styles */
+
+.btn {
+    background-color: #1a8918;
+
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1em;
+
+    cursor: pointer;
+
+    border-radius: 10px;
+    border: none;
+
+    width: 120px;
+    padding: 10px 15px;
+}
+
+.btn.btn-dark {
+    background-color: #000;
+    border-radius: 0;
+}
+
+.btn.btn-outline {
+    background-color: transparent;
+    border-radius: 0;
+    border: 1px solid #000;
+
+    color: #000;
+
+    padding: 7px 30px;
+}
+
+.btn:hover {
+    background-color: #0f730c;
+    color: #fff;
+}
+
+.btn.btn-outline:hover {
+    background-color: #000;
+}
+
+.btn.btn-danger:hover {
+    background-color: #dc3545;
+}
+
+button[disable] {
+    background-color: #aaa;
+}
+
+/* Error message */
+
+.container .error {
+    color: #721c24;
+
+    background-color: #f8d7da;
+    border: 1px solid #f8d7da;
+    border-radius: 5px;
+
+    padding: 5px;
 }
